--- a/templates/signup.html
+++ b/templates/signup.html
@@ -131,17 +131,17 @@
             <div class="options">
                 <label class="option">
                     <input type="radio" name="signup_type" value="community">
-                    <img src="{{ url_for('static/img', filename='community.jpg') }}" alt="Scout leader in uniform, neck down">
+                    <img src="{{ url_for('static/', filename='community.jpg') }}" alt="Scout leader in uniform, neck down">
                     <span>Community Group</span>
                 </label>
                 <label class="option">
                     <input type="radio" name="signup_type" value="seller">
-                    <img src="{{ url_for('static/img', filename='merchant.jpg') }}" alt="White man in business suit, neck down">
+                    <img src="{{ url_for('static/', filename='merchant.jpg') }}" alt="White man in business suit, neck down">
                     <span>Merchant</span>
                 </label>
                 <label class="option">
                     <input type="radio" name="signup_type" value="wixpro">
-                    <img src="{{ url_for('static/img', filename='wixpro.jpg') }}" alt="Female ethnic web designer in casual dress, neck down">
+                    <img src="{{ url_for('static/', filename='wixpro.jpg') }}" alt="Female ethnic web designer in casual dress, neck down">
                     <span>Partner</span>
                 </label>
             </div>
